Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22985

Assertion `!(thd->rgi_slave && thd->rgi_slave->did_mark_start_commit)' failed in ha_rollback_trans

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • N/A
    • Replication
    • None

    Description

      --source include/have_log_bin.inc
      --source include/have_innodb.inc
      --source include/master-slave.inc
      set global binlog_split_alter=true;
      --connection slave
      stop slave;
      SET global slave_parallel_threads=2;
      set global slave_parallel_mode=optimistic;
      start slave;
      --connection master
       
      CREATE TABLE t1 (i int primary key) ENGINE = InnoDB;
      --connection master1 
      ALTER  TABLE t1 DROP PRIMARY KEY;
      ALTER  TABLE t1 ADD UNIQUE KEY ui (i);
      --error 1280 ###?  query 'ALTER  TABLE t1 ADD PRIMARY KEY ( i )' failed: 1280: Incorrect index name 'ui'
      ALTER  TABLE t1 ADD PRIMARY KEY (i);
       
      --sync_slave_with_master
       
      --connection master
      drop table t1;
      --source include/rpl_end.inc
      

      10.5-olter-v4 c003b3622c04527d5efb5f

      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x00007f6f46a7a801 in __GI_abort () at abort.c:79
      #6  0x00007f6f46a6a39a in __assert_fail_base (fmt=0x7f6f46bf17d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55d6f769cb88 "!(thd->rgi_slave && thd->rgi_slave->did_mark_start_commit)", file=file@entry=0x55d6f769bff0 "/10.5o/sql/handler.cc", line=line@entry=1856, function=function@entry=0x55d6f769ef80 <ha_rollback_trans(THD*, bool)::__PRETTY_FUNCTION__> "int ha_rollback_trans(THD*, bool)") at assert.c:92
      #7  0x00007f6f46a6a412 in __GI___assert_fail (assertion=0x55d6f769cb88 "!(thd->rgi_slave && thd->rgi_slave->did_mark_start_commit)", file=0x55d6f769bff0 "/10.5o/sql/handler.cc", line=1856, function=0x55d6f769ef80 <ha_rollback_trans(THD*, bool)::__PRETTY_FUNCTION__> "int ha_rollback_trans(THD*, bool)") at assert.c:101
      #8  0x000055d6f6b44316 in ha_rollback_trans (thd=0x7f6ef4000d60, all=false) at /10.5o/sql/handler.cc:1856
      #9  0x000055d6f69af751 in trans_rollback_stmt (thd=0x7f6ef4000d60) at /10.5o/sql/transaction.cc:495
      #10 0x000055d6f6804e30 in mysql_execute_command (thd=0x7f6ef4000d60) at /10.5o/sql/sql_parse.cc:6011
      #11 0x000055d6f680aa38 in mysql_parse (thd=0x7f6ef4000d60, rawbuf=0x7f6ef803c61b "/*!100001  ALTER  TABLE t1 ADD PRIMARY KEY (i) EXECUTE = UNTIL COMMIT 10 */", length=75, parser_state=0x7f6f40074a00, is_com_multi=false, is_next_command=false) at /10.5o/sql/sql_parse.cc:7988
      #12 0x000055d6f6c9fa02 in Query_log_event::do_apply_event (this=0x7f6ef803c470, rgi=0x7f6ef80387e0, query_arg=0x7f6ef803c61b "/*!100001  ALTER  TABLE t1 ADD PRIMARY KEY (i) EXECUTE = UNTIL COMMIT 10 */", q_len_arg=75) at /10.5o/sql/log_event_server.cc:1853
      #13 0x000055d6f6c9e8a9 in Query_log_event::do_apply_event (this=0x7f6ef803c470, rgi=0x7f6ef80387e0) at /10.5o/sql/log_event_server.cc:1530
      #14 0x000055d6f66fe16f in Log_event::apply_event (this=0x7f6ef803c470, rgi=0x7f6ef80387e0) at /10.5o/sql/log_event.h:1487
      #15 0x000055d6f66f0bb0 in apply_event_and_update_pos_apply (ev=0x7f6ef803c470, thd=0x7f6ef4000d60, rgi=0x7f6ef80387e0, reason=0) at /10.5o/sql/slave.cc:3987
      #16 0x000055d6f66f1358 in apply_event_and_update_pos_for_parallel (ev=0x7f6ef803c470, thd=0x7f6ef4000d60, rgi=0x7f6ef80387e0) at /10.5o/sql/slave.cc:4169
      #17 0x000055d6f6a18a34 in rpt_handle_event (qev=0x7f6ef803c750, rpt=0x7f6ef8029150) at /10.5o/sql/rpl_parallel.cc:61
      #18 0x000055d6f6a1bf45 in handle_rpl_parallel_thread (arg=0x7f6ef8029150) at /10.5o/sql/rpl_parallel.cc:1341
      #19 0x000055d6f6eb0a82 in pfs_spawn_thread (arg=0x7f6efc01b340) at /10.5o/storage/perfschema/pfs.cc:1862
      #20 0x00007f6f479756db in start_thread (arg=0x7f6f40075700) at pthread_create.c:463
      #21 0x00007f6f46b5b88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
       
      
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.